--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -1,18 +1,56 @@
-header{
-    background-color: 'gray-800';
-    background-image: url('../../../images/chairBg.png');
+.hero-header{
+    display: flex;
+}
+.hero-content {
+    
+    background-image: url(../../../images/hero3.png);
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    width:100%;
+    margin-top: -200px;
+    margin-left: -100px;
+    width: 100vw;
+    height: 100vh;
 }
-header::after{
-    content: '';
-    position: absolute;
-    top:0;
-    right:0;
-    background-color: #3A4256;
-    width:30%;
-    z-index: -50;
-    height: 700px;
+
+.text-container {
+    padding: 50px;
+     animation: fadeInUp 2s ease-in-out;
+}
+.image-container {
+    flex: 2;
+    width: 100vw;
+    height: 100vh;
+    margin-top: -200px;
+}
+
+.image-container img {
+   
+   width: 100%;
+    height: 100%;    
+}
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+/* Media Queries for Responsive Design */
+@media (max-width: 760px) {
+    .hero-content {
+       background-image: url(../../../images/chairBg.png);
+       background-repeat: no-repeat;
+       background-size: cover;
+        align-items: center;
+        margin-top: -50px;
+        height: 100vh;
+    }
+    .image-container{
+        display: none;
+    }    
 }
