--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .navbar-h{
     text-decoration: none;
-    color:rgb(0, 0, 0);
+    color:rgb(0, 189, 164);
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
     font-weight: 800;
+    font-size: 20px;
 }
 .stickynav {
     box-shadow: 0 2px 5px 1px rgb(64 60 67 / 16%);
@@ -23,5 +24,44 @@
     color: black !important;
 }
 .textWhite{
-    color: white !important;
+    color: rgb(0, 5, 5) !important;
+}
+.nav-link {
+    color: #12bed8;
+    text-decoration: none;
+}
+
+.nav-link.active-link {
+    border-bottom: 4px solid #17a2b8; /* Change this color as needed */
+    color: #12bed8;
+}
+.shadows-into-light-regular {
+  font-family: "Shadows Into Light", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+.login-container {
+    position: relative;
+    display: inline-block;
+}
+
+.login-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.login-text {
+    visibility: hidden;
+    opacity: 0;
+    font-size: large;
+    font-weight: bold;
+    transition: visibility 0.2s, opacity 0.2s ease-in-out;
+    margin-left: 10px; /* Adjust this value as needed */
+}
+
+.login-image:hover + .login-text,
+.login-container:hover .login-text {
+    visibility: visible;
+    opacity: 1;
 }
